--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -3,6 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "lexical":  "^0.15.0",
+        "@lexical/html":  "^0.15.0",
+        "@lexical/link":  "^0.15.0",
+        "@lexical/list":  "^0.15.0",
+        "@lexical/react":  "^0.15.0",
+        "@lexical/selection":  "^0.15.0",
         "@hookform/resolvers": "^2.5.2",
         "@iconify/icons-fa-solid": "1.1.1",
         "@iconify/react": "3.1.0",
@@ -16,10 +22,10 @@
         "moment": "^2.30.1",
         "oph-urls-js": "github:Opetushallitus/oph-urls-js#master",
         "query-string": "^7.0.1",
-        "react": "^16.14.0",
+        "react": "^17.0.2",
         "react-accessible-accordion": "3.3.3",
         "react-datepicker": "3.2.2",
-        "react-dom": "^16.14.0",
+        "react-dom": "^17.0.2",
         "react-hook-form": "^7.8.4",
         "react-notifications-component": "^2.4.1",
         "react-router-dom": "5.2.0",
@@ -33,9 +39,9 @@
     "devDependencies": {
         "@types/joi-phone-number": "^5.0.6",
         "@types/node": "^20.12.11",
-        "@types/react": "^16.14.47",
+        "@types/react": "^17.0.2",
         "@types/react-datepicker": "2.11.1",
-        "@types/react-dom": "^16.9.20",
+        "@types/react-dom": "^17.0.11",
         "@types/react-notifications-component": "^3.1.2",
         "@types/react-router-dom": "5.1.5",
         "@types/react-table": "^7.0.19",
