--- a/organisaatio-service/src/main/resources/organisaatio-service-oph.properties
+++ b/organisaatio-service/src/main/resources/organisaatio-service-oph.properties
@@ -8,6 +8,7 @@ cas.login=${cas.base}/login
 kayttooikeus-service.login=${url-virkailija}/kayttooikeus-service/j_spring_cas_security_check
 kayttooikeus-service.organisaatiohenkilo.organisaatiooid=${url-virkailija}/kayttooikeus-service/organisaatiohenkilo/organisaatioOid
 kayttooikeus-service.virkailija.haku=${url-virkailija}/kayttooikeus-service/virkailija/haku
+kayttooikeus-service.kutsu=${url-virkailija}/kayttooikeus-service/kutsu
 
 oppijanumero-service.login=${url-virkailija}/oppijanumerorekisteri-service/j_spring_cas_security_check
 oppijanumero-service.henkilo=${url-virkailija}/oppijanumerorekisteri-service/henkilo/$1
