OPHYK-74 Add support for heading 1-4 to viesti rich text editor

--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -8,7 +8,9 @@
         "@lexical/link":  "^0.15.0",
         "@lexical/list":  "^0.15.0",
         "@lexical/react":  "^0.15.0",
+        "@lexical/utils":  "^0.15.0",
         "@lexical/selection":  "^0.15.0",
+	"@lexical/rich-text": "^0.15.0",
         "@hookform/resolvers": "^2.5.2",
         "@iconify/icons-fa-solid": "1.1.1",
         "@iconify/react": "3.1.0",
