--- a/organisaatio-service/src/main/resources/config/sade.yml
+++ b/organisaatio-service/src/main/resources/config/sade.yml
@@ -1,6 +1,6 @@
 feature.mockapi: false
-feature.ostj-182-uusi-osoitepalvelu: false
-feature.ostj-201-muotoilematon-viesti: false
+feature.ostj-182-uusi-osoitepalvelu: true
+feature.ostj-201-muotoilematon-viesti: true
 
 koodisto.baseurl: "https://${host.virkailija}/koodisto-service"
 viestinvalitys.baseurl: "https://viestinvalitys.opintopolku.fi/lahetys"
