OPHYK-285 remove old viestintapalvelu/ryhmasahkoposti integration and send all emails through the same email service

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -18,7 +18,7 @@ host.ilb=ilb.untuvaopintopolku.fi
 organisaatio.ui.url=localhost:8180/organisaatio/html/organisaatiot
 organisaatio.ui.ilmoitukset.url=${organisaatio.ui.url}/ilmoitukset
 
-
+spring.freemarker.template-loader-path=classpath:templates/
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.id.db_structure_naming_strategy=single
@@ -42,7 +42,7 @@ server.internal.context-path=/internal
 server.api.context-path=/api
 
 springdoc.packagesToScan=fi.vm.sade.organisaatio.resource
-springdoc.pathsToMatch: /**
+springdoc.pathsToMatch=/**
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.swagger-ui.syntaxHighlight.activated=false
 springdoc.api-docs.path=/api-docs
@@ -69,14 +69,12 @@ oiva.username=oivausername
 oiva.password=oivapassword
 
 organisaatio-service.scheduled.update.cron.expression= 0 0 0 * * ?
-organisaatio.service.username.to.viestinta=
-organisaatio.service.password.to.viestinta=
 spring.datasource.url=jdbc:postgresql://localhost:5432/organisaatio
 spring.datasource.username=postgres
 spring.datasource.password=
 spring.datasource.hikari.maximumPoolSize=20
 root.organisaatio.oid=1.2.246.562.10.00000000001
-ryhmasahkoposti.service.email=
+ytjpaivitysloki.service.email=dummy@email.fi
 url-virkailija=https://${host.virkailija}
 url-ytj=https://api.tietopalvelu.ytj.fi/yritystiedot.asmx
 
@@ -87,11 +85,11 @@ feature.mockapi=true
 aws.sns.lakkautusTopicArn=undefined
 aws.sns.enabled=false
 
-organisaatio.tasks.export.enabled: false
-organisaatio.tasks.export.bucket-name: none
-organisaatio.tasks.export.copy-to-lampi: false
-organisaatio.tasks.export.lampi-bucket-name: none
-organisaatio.tasks.export.lampi-role-arn: none
-organisaatio.tasks.export.lampi-external-id: none
+organisaatio.tasks.export.enabled=false
+organisaatio.tasks.export.bucket-name=none
+organisaatio.tasks.export.copy-to-lampi=false
+organisaatio.tasks.export.lampi-bucket-name=none
+organisaatio.tasks.export.lampi-role-arn=none
+organisaatio.tasks.export.lampi-external-id=none
 
 varda-rekisterointi.kayttooikeusryhma-id=123
