--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -58,10 +58,7 @@ oiva.password=oivapassword
 
 organisaatio-service.scheduled.update.cron.expression=0 0 0-6/1 * * ?
 
-organisaatio.service.username.to.viestinta=username
-organisaatio.service.password.to.viestinta=password
-organisaatio-service.ryhmasahkoposti-service.rest.url=https://localhost:8503/viestintapalvelu
-ryhmasahkoposti.service.email=e@mail.com
+ytjpaivitysloki.service.email=e@mail.com
 organisaatio.ui.url=localhost:8180/organisaatio-ui/html/organisaatiot
 organisaatio.ui.ilmoitukset.url=${organisaatio.ui.url}/ilmoitukset
 
@@ -94,6 +91,7 @@ spring.flyway.table=schema_version_history2
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
 spring.flyway.locations=classpath:db/migration
+spring.freemarker.template-loader-path=classpath:templates/
 spring.datasource.hikari.maximumPoolSize=5
 spring.messages.basename=Messages
 
