OPHYK-107 use postgres in tests

--- a/varda-rekisterointi/src/test/resources/application-integration-test.yml
+++ b/varda-rekisterointi/src/test/resources/application-integration-test.yml
@@ -1,5 +1,7 @@
 spring:
-  session:
-    store-type: none
+  datasource:
+    url: jdbc:postgresql://localhost:5433/varda-rekisterointi
+    username: varda-rekisterointi
+    password: varda-rekisterointi
 db-scheduler:
   enabled: true
