--- a/varda-rekisterointi/.github/workflows/build.yml
+++ b/varda-rekisterointi/.github/workflows/build.yml
@@ -6,6 +6,21 @@ on:
   pull_request:
 jobs:
   build:
+    services:
+      postgres:
+        image: postgres:15.7
+        ports:
+          - 5433:5432
+        env:
+          POSTGRES_USER: varda-rekisterointi
+          POSTGRES_DB: varda-rekisterointi
+          POSTGRES_PASSWORD: varda-rekisterointi
+          POSTGRES_HOST_AUTH_METHOD: trust
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
