--- a/varda-rekisterointi/docker-compose.yml
+++ b/varda-rekisterointi/docker-compose.yml
@@ -1,6 +1,6 @@
-version: '3'
 services:
-  varda-rekisterointi-db:
+  database:
+    container_name: varda-rekisterointi-db
     image: postgres:15.7
     environment:
     - POSTGRES_USER=varda-rekisterointi
@@ -8,3 +8,21 @@ services:
     - POSTGRES_DB=varda-rekisterointi
     ports:
     - "5432:5432"
+    command: ["postgres", "-c", "log_statement=all"]
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  test-database:
+    container_name: varda-rekisterointi-test-db
+    image: postgres:15.7
+    environment:
+    - POSTGRES_USER=varda-rekisterointi
+    - POSTGRES_PASSWORD=varda-rekisterointi
+    - POSTGRES_DB=varda-rekisterointi
+    ports:
+    - "5433:5432"
+    command: ["postgres", "-c", "log_statement=all"]
+volumes:
+  database-data:
