--- a/organisaatio-service/src/main/resources/config/organisaatio.yml
+++ b/organisaatio-service/src/main/resources/config/organisaatio.yml
@@ -9,16 +9,16 @@ port.tarjonta-service: "443"
 port.postgresql: ${postgresql_port}
 # END
 
-rajapinnat.ytj.asiakastunnus: ${rajapinnat_ytj_asiakastunnus} # TODO ssm
-rajapinnat.ytj.avain: ${rajapinnat_ytj_avain} # TODO ssm
+rajapinnat.ytj.asiakastunnus: ${rajapinnat_ytj_asiakastunnus}
+rajapinnat.ytj.avain: ${rajapinnat_ytj_avain}
 organisaatio.service.username: ${organisaatio_service_username}
 organisaatio.service.password: ${organisaatio_service_password}
-organisaatio.service.username.to.koodisto: ${organisaatio_service_username_to_koodisto} # TODO ssm
-organisaatio.service.password.to.koodisto: ${organisaatio_service_password_to_koodisto} # TODO ssm
+organisaatio.service.username.to.koodisto: ${organisaatio_service_username_to_koodisto}
+organisaatio.service.password.to.koodisto: ${organisaatio_service_password_to_koodisto}
 organisaatio-service.scheduled.update.cron.expression: "0 0 1 * * ?"
-organisaatio.ui.url: ${host.virkailija}/organisaatio/html/organisaatiot # TODO
-organisaatio.ui.ilmoitukset.url: ${organisaatio.ui.url}/ilmoitukset # TODO
-ytjpaivitysloki.service.email: ${ryhmasahkoposti_service_email:jatkuvatpalvelut@oph.fi} # TODO
+organisaatio.ui.url: ${host.virkailija}/organisaatio/html/organisaatiot
+organisaatio.ui.ilmoitukset.url: ${organisaatio.ui.url}/ilmoitukset
+ytjpaivitysloki.service.email: ${ryhmasahkoposti_service_email:jatkuvatpalvelut@oph.fi}
 organisaatio-service.postgresql.url: jdbc:postgresql://${postgresql_host}:${postgresql_port}/${postgresql_db}
 organisaatio-service.postgresql.user: ${postgresql_username}
 organisaatio-service.postgresql.password: ${postgresql_password}
