OPHYK-212 Include repeatable migrations in non-production environments

--- a/organisaatio-service/src/main/resources/config/dev.yml
+++ b/organisaatio-service/src/main/resources/config/dev.yml
@@ -1,3 +1,4 @@
+spring.flyway.locations: classpath:db/migration,classpath:db/migration-test
 host.cas: "virkailija.untuvaopintopolku.fi"
 host.ilb: "https://virkailija.untuvaopintopolku.fi"
 host.virkailija: "virkailija.untuvaopintopolku.fi"
