--- a/organisaatio-service/src/main/resources/config/hahtuva2.yml
+++ b/organisaatio-service/src/main/resources/config/hahtuva2.yml
@@ -1,3 +1,4 @@
+spring.flyway.locations: classpath:db/migration,classpath:db/migration-test
 host.cas: "virkailija.hahtuvaopintopolku.fi"
 host.ilb: "https://virkailija.hahtuvaopintopolku.fi"
 host.virkailija: "virkailija.hahtuvaopintopolku.fi"
