Use S3CrtAsyncClient as recommended by AWS
https://docs.aws.amazon.com/sdk-for-java/latest/developer-guide/crt-based-s3-client.html

--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation platform('software.amazon.awssdk:bom:2.25.23')
     implementation 'software.amazon.awssdk:sts'
     implementation 'software.amazon.awssdk:s3'
+    implementation 'software.amazon.awssdk.crt:aws-crt:0.29.19'
     implementation 'software.amazon.awssdk:s3-transfer-manager'
 
     // Lombok
