--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
     implementation group: 'org.flywaydb', name: 'flyway-core'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
+    implementation 'joda-time:joda-time:2.13.0'
 
     implementation('commons-fileupload:commons-fileupload:1.5') {
         exclude group: 'org.slf4j', module: 'slf4j-api'
