--- a/rekisterointi/.github/workflows/pull-request.yml
+++ b/rekisterointi/.github/workflows/pull-request.yml
@@ -1,8 +1,6 @@
 name: rekisterointi
 on:
-  workflow_dispatch:
-  push:
-    branches: [master]
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,35 +33,6 @@ jobs:
         with:
           name: rekisterointi-jar
           path: target/rekisterointi.jar
-  sonarcloud:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: "21"
-          distribution: "corretto"
-          cache: "maven"
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Opetushallitus_rekisterointi
   test:
     needs: [build]
     runs-on: ubuntu-latest
