--- a/organisaatio-service/build.gradle
+++ b/organisaatio-service/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'application'
 }
 
+dependencyLocking {
+    lockAllConfigurations()
+}
+
 apply plugin: 'io.spring.dependency-management'
 
 ext {
