--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,32 @@ services:
     ports:
       - 5433:5432
     command: ["postgres", "-c", "log_statement=all"]
+
+  varda-rekisterointi-db:
+    container_name: varda-rekisterointi-db
+    image: postgres:15.7
+    environment:
+      - POSTGRES_USER=varda-rekisterointi
+      - POSTGRES_PASSWORD=varda-rekisterointi
+      - POSTGRES_DB=varda-rekisterointi
+    ports:
+      - "5438:5432"
+    command: ["postgres", "-c", "log_statement=all"]
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  varda-rekisterointi-test-db:
+    container_name: varda-rekisterointi-test-db
+    image: postgres:15.7
+    environment:
+      - POSTGRES_USER=varda-rekisterointi
+      - POSTGRES_PASSWORD=varda-rekisterointi
+      - POSTGRES_DB=varda-rekisterointi
+    ports:
+      - "5439:5432"
+    command: ["postgres", "-c", "log_statement=all"]
+
 volumes:
   database-data:
