--- a/.github/workflows/build-varda-rekisterointi.yml
+++ b/.github/workflows/build-varda-rekisterointi.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+          cache-dependency-path: varda-rekisterointi/package-lock.json
       - name: Build frontend
         working-directory: ./varda-rekisterointi
         run: |
