--- a/organisaatio-service/src/main/resources/config/organisaatio.yml
+++ b/organisaatio-service/src/main/resources/config/organisaatio.yml
@@ -18,7 +18,7 @@ organisaatio.service.password.to.koodisto: ${organisaatio_service_password_to_ko
 organisaatio-service.scheduled.update.cron.expression: "0 0 1 * * ?"
 organisaatio.ui.url: ${host.virkailija}/organisaatio/html/organisaatiot
 organisaatio.ui.ilmoitukset.url: ${organisaatio.ui.url}/ilmoitukset
-ytjpaivitysloki.service.email: ${ryhmasahkoposti_service_email:jatkuvatpalvelut@oph.fi}
+ytjpaivitysloki.service.email: ${ytjpaivitysloki_service_email}
 organisaatio-service.postgresql.url: jdbc:postgresql://${postgresql_host}:${postgresql_port}/${postgresql_db}
 organisaatio-service.postgresql.user: ${postgresql_username}
 organisaatio-service.postgresql.password: ${postgresql_password}
