--- a/varda-rekisterointi/src/main/resources/config/prod.yml
+++ b/varda-rekisterointi/src/main/resources/config/prod.yml
@@ -9,3 +9,5 @@ varda-rekisterointi.kayttooikeus.ryhma.paivakoti: 107000756
 varda-rekisterointi.kayttooikeus.ryhma.ryhmaperhepaivakoti: 107000786
 varda-rekisterointi.kayttooikeus.ryhma.perhepaivahoitaja: 107000737
 varda-rekisterointi.kayttooikeus.ryhma.jotpa: 108740796
+
+viestinvalitys.baseurl: https://viestinvalitys.opintopolku.fi/lahetys
