--- a/varda-rekisterointi/src/main/resources/config/hahtuva.yml
+++ b/varda-rekisterointi/src/main/resources/config/hahtuva.yml
@@ -10,3 +10,5 @@ varda-rekisterointi.kayttooikeus.ryhma.paivakoti: -1
 varda-rekisterointi.kayttooikeus.ryhma.ryhmaperhepaivakoti: -1
 varda-rekisterointi.kayttooikeus.ryhma.perhepaivahoitaja: -1
 varda-rekisterointi.kayttooikeus.ryhma.jotpa: -1
+
+viestinvalitys.baseurl: https://viestinvalitys.hahtuvaopintopolku.fi/lahetys
