--- a/varda-rekisterointi/src/main/resources/config/qa.yml
+++ b/varda-rekisterointi/src/main/resources/config/qa.yml
@@ -9,3 +9,5 @@ varda-rekisterointi.kayttooikeus.ryhma.paivakoti: 68995313
 varda-rekisterointi.kayttooikeus.ryhma.ryhmaperhepaivakoti: 68995333
 varda-rekisterointi.kayttooikeus.ryhma.perhepaivahoitaja: 68995347
 varda-rekisterointi.kayttooikeus.ryhma.jotpa: 69336906
+
+viestinvalitys.baseurl: https://viestinvalitys.testiopintopolku.fi/lahetys
