--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -88,4 +88,6 @@ organisaatio.tasks.export.lampi-bucket-name=none
 organisaatio.tasks.export.lampi-role-arn=none
 organisaatio.tasks.export.lampi-external-id=none
 
+organisaatio.tasks.datantuonti.export.enabled=false
+
 varda-rekisterointi.kayttooikeusryhma-id=123
