--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -89,5 +89,6 @@ organisaatio.tasks.export.lampi-role-arn=none
 organisaatio.tasks.export.lampi-external-id=none
 
 organisaatio.tasks.datantuonti.export.enabled=false
+organisaatio.tasks.datantuonti.export.bucket-name=none
 
 varda-rekisterointi.kayttooikeusryhma-id=123
