OPHYK-318 Add missing properties to test context

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -123,4 +123,7 @@ organisaatio.tasks.export.lampi-bucket-name: none
 organisaatio.tasks.export.lampi-role-arn: none
 organisaatio.tasks.export.lampi-external-id: none
 
+organisaatio.tasks.datantuonti.export.enabled=false
+organisaatio.tasks.datantuonti.export.bucket-name=none
+
 varda-rekisterointi.kayttooikeusryhma-id: 123
