--- a/organisaatio-service/src/main/resources/config/hahtuva.yml
+++ b/organisaatio-service/src/main/resources/config/hahtuva.yml
@@ -17,4 +17,7 @@ organisaatio.tasks.export.lampi-bucket-name: none
 organisaatio.tasks.export.lampi-role-arn: none
 organisaatio.tasks.export.lampi-external-id: none
 
+organisaatio.tasks.datantuonti.export.enabled: true
+organisaatio.tasks.datantuonti.export.bucket-name: ${export_bucket_name}
+
 varda-rekisterointi.kayttooikeusryhma-id: 70008488
