OPHYK-318 Enable datantuonti export on dev

--- a/organisaatio-service/src/main/resources/config/dev.yml
+++ b/organisaatio-service/src/main/resources/config/dev.yml
@@ -18,4 +18,7 @@ organisaatio.tasks.export.lampi-bucket-name: oph-lampi-dev
 organisaatio.tasks.export.lampi-role-arn: ${lampi_role_arn}
 organisaatio.tasks.export.lampi-external-id: ${lampi_external_id}
 
+organisaatio.tasks.datantuonti.export.enabled: true
+organisaatio.tasks.datantuonti.export.bucket-name: ${export_bucket_name}
+
 varda-rekisterointi.kayttooikeusryhma-id: 70008488
