OPHYK-318 import new organisations from datantuonti

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -90,5 +90,6 @@ organisaatio.tasks.export.lampi-external-id=none
 
 organisaatio.tasks.datantuonti.export.enabled=false
 organisaatio.tasks.datantuonti.export.bucket-name=none
+organisaatio.tasks.datantuonti.import.enabled=false
 
 varda-rekisterointi.kayttooikeusryhma-id=123
