--- a/organisaatio-api/pom.xml
+++ b/organisaatio-api/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>organisaatio</artifactId>
         <groupId>fi.vm.sade.organisaatio</groupId>
         <version>2024-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
