--- a/organisaatio-service/pom.xml
+++ b/organisaatio-service/pom.xml
@@ -7,7 +7,7 @@
         <groupId>fi.vm.sade.organisaatio</groupId>
         <artifactId>organisaatio</artifactId>
         <version>2024-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>organisaatio-service</artifactId>
