--- a/ytj-client/ytj-api/pom.xml
+++ b/ytj-client/ytj-api/pom.xml
@@ -6,7 +6,7 @@
         <groupId>fi.vm.sade.organisaatio.ytj</groupId>
         <artifactId>ytj-client</artifactId>
         <version>2024-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
