OPHYK-318 Add missing property for tests

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -125,5 +125,6 @@ organisaatio.tasks.export.lampi-external-id: none
 
 organisaatio.tasks.datantuonti.export.enabled=false
 organisaatio.tasks.datantuonti.export.bucket-name=none
+organisaatio.tasks.datantuonti.export.encryption-key-id=aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
 
 varda-rekisterointi.kayttooikeusryhma-id: 123
