--- a/ytj-client/ytj-generated-model/pom.xml
+++ b/ytj-client/ytj-generated-model/pom.xml
@@ -56,6 +56,7 @@
                             <wsdlOptions>
                                 <wsdlOption>
                                     <wsdl>${basedir}/src/main/resources/wsdl/yritystiedot.wsdl</wsdl>
+                                    <wsdlLocation>classpath:wsdl/yritystiedot.wsdl</wsdlLocation>
                                     <extraargs>
                                         <extraarg>-xjc-Xbg</extraarg>
                                     </extraargs>
