--- a/rekisterointi/pom.xml
+++ b/rekisterointi/pom.xml
@@ -61,6 +61,10 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
 		</dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>fi.vm.sade.java-utils</groupId>
 			<artifactId>java-http</artifactId>
