--- a/.github/workflows/build-rekisterointi.yml
+++ b/.github/workflows/build-rekisterointi.yml
@@ -51,8 +51,7 @@ jobs:
           node-version: "20.x"
           cache: "npm"
           cache-dependency-path: rekisterointi/rekisterointi-ui/package-lock.json
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: "21"
           distribution: "corretto"
