--- a/playwright/package.json
+++ b/playwright/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@playwright/test": "^1.50.0",
     "@types/node": "^20.12.7",
+    "finnish-business-ids": "^3.1.1",
     "xlsx": "^0.18.5"
   }
 }
