--- a/playwright/tsconfig.json
+++ b/playwright/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
+    "target": "es6",
+    "lib": [
+      "es2021"
+    ],
+    "moduleResolution": "node",
     "types": ["node"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
   }
 }
