--- a/.github/workflows/build-organisaatio-service.yml
+++ b/.github/workflows/build-organisaatio-service.yml
@@ -101,7 +101,7 @@ jobs:
           java -jar -Xms2g -Xmx2g -Dspring.config.location=classpath:application.properties,classpath:application-test-envs.properties -Dspring.profiles.active=dev -Dspring.flyway.enabled=true -Durl-virkailija=http://localhost:9000 -Dhost.virkailija=localhost:9000 -Durl-ytj=http://localhost:9000/ytj -Durl-oidservice=http://localhost:9000/oidservice -Dcas.service.organisaatio-service=http://localhost:8080/organisaatio-service-not-available organisaatio-service/target/organisaatio-service.jar &
           cd organisaatio-ui && npm run cypress:ci
           kill $(jobs -p) || true
-  playwright:
+  playwright-osoitepalvelu:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     services:
@@ -149,7 +149,63 @@ jobs:
           while ! nc -z localhost 8080; do
             sleep 1; echo "Sleeping 8080"
           done
-          cd playwright && npx playwright test
+          cd playwright && npm run test:osoitepalvelu
+          kill $(jobs -p) || true
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright/playwright-report/
+          retention-days: 30
+  playwright-organisaatiot:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_HOST_AUTH_METHOD: trust
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: organisaatio-ui/package-lock.json
+      - uses: actions/setup-java@v4
+        with:
+          java-version: "21"
+          distribution: "corretto"
+      - name: pre scripts
+        run: |
+          PGPASSWORD=postgres psql -c 'CREATE DATABASE organisaatio;' -h localhost -U postgres
+          cd mock-api && npm ci && cd -
+          cd organisaatio-ui && npm ci --force && cd -
+          cd playwright && npm ci && npx playwright install --with-deps && cd -
+      - name: Build backend with no tests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: mvn clean install -DskipTests=true
+      - name:
+        run: |
+          cd mock-api && npm run mock-api &
+          cd organisaatio-ui && npm run start &
+          java -jar -Xms2g -Xmx2g -Dspring.config.location=classpath:application.properties,classpath:application-test-envs.properties -Dspring.profiles.active=dev -Dspring.flyway.enabled=true -Durl-virkailija=http://localhost:9000 -Dhost.virkailija=localhost:9000 -Durl-ytj=http://localhost:9000/ytj -Durl-oidservice=http://localhost:9000/oidservice -Dcas.service.organisaatio-service=http://localhost:8080/organisaatio-service-not-available organisaatio-service/target/organisaatio-service.jar &
+          while ! nc -z localhost 3003; do
+            sleep 1; echo "Sleeping 3003"
+          done
+          while ! nc -z localhost 8080; do
+            sleep 1; echo "Sleeping 8080"
+          done
+          cd playwright && npm run test:organisaatiot
           kill $(jobs -p) || true
       - uses: actions/upload-artifact@v4
         if: always()
