--- a/playwright/package.json
+++ b/playwright/package.json
@@ -4,5 +4,9 @@
     "@types/node": "^20.12.7",
     "finnish-business-ids": "^3.1.1",
     "xlsx": "^0.18.5"
+  },
+  "scripts": {
+    "test:organisaatiot": "npx playwright test tests/organisaatiot/",
+    "test:osoitepalvelu": "npx playwright test tests/osoitteet/"
   }
 }
