--- a/.github/workflows/build-organisaatio-service.yml
+++ b/.github/workflows/build-organisaatio-service.yml
@@ -154,7 +154,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: playwright-report
+          name: playwright-osoitepalvelu-report
           path: playwright/test-results/
           retention-days: 30
   playwright-organisaatiot:
@@ -210,6 +210,6 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: playwright-report
+          name: playwright-organisaatiot-report
           path: playwright/test-results/
           retention-days: 30
