--- a/playwright/package.json
+++ b/playwright/package.json
@@ -3,6 +3,7 @@
     "@playwright/test": "^1.50.0",
     "@types/node": "^20.12.7",
     "finnish-business-ids": "^3.1.1",
+    "moment": "^2.30.1",
     "xlsx": "^0.18.5"
   },
   "scripts": {
