--- a/organisaatio-ui/package.json
+++ b/organisaatio-ui/package.json
@@ -51,17 +51,13 @@
         "@types/styled-components": "^5",
         "@typescript-eslint/eslint-plugin": "^7.8.0",
         "@typescript-eslint/parser": "^7.8.0",
-        "concurrently": "^6.0.2",
         "copy-webpack-plugin": "^12.0.2",
         "css-loader": "^6.11.0",
-        "cypress": "^13.9.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^8.10.0",
-        "eslint-plugin-cypress": "^3.2.0",
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-react": "^7.34.1",
         "file-loader": "^6.2.0",
-        "finnish-business-ids": "^3.1.1",
         "fork-ts-checker-webpack-plugin": "^9.0.2",
         "html-webpack-plugin": "^5.6.0",
         "mini-css-extract-plugin": "^2.9.0",
@@ -72,7 +68,6 @@
         "ts-loader": "^9.4.2",
         "tsx": "^4.10.1",
         "typescript": "5.3.*",
-        "wait-on": "^7.2.0",
         "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4",
         "webpack-dev-server": "^5.0.4",
@@ -86,25 +81,19 @@
         "lint:fix": "eslint --ext .ts,.tsx src --fix",
         "prettier": "prettier --check 'src/**/*{js,jsx,ts,tsx}'",
         "prettier:fix": "prettier --write 'src/**/*{js,jsx,ts,tsx}'",
-        "audit": "npm audit --only=prod --audit-level=critical",
-        "cypress:open": "cypress open",
-        "cypress:run": "cypress run",
-        "cypress:notused": "wait-on http://devaaja:devaaja@localhost:8080/organisaatio-service && CYPRESS_BASE_URL=http://devaaja:devaaja@localhost:8080/ npm run cypress:run",
-        "cypress:ci": "wait-on http://localhost:3003/organisaatio-service && npm run cypress:run"
+        "audit": "npm audit --only=prod --audit-level=critical"
     },
     "eslintConfig": {
         "parser": "@typescript-eslint/parser",
         "plugins": [
             "@typescript-eslint",
-            "cypress",
             "react"
         ],
         "extends": [
             "eslint:recommended",
             "plugin:@typescript-eslint/eslint-recommended",
             "plugin:@typescript-eslint/recommended",
-            "plugin:react/recommended",
-            "plugin:cypress/recommended"
+            "plugin:react/recommended"
         ],
         "settings": {
             "react": {
