OPHYK-304 Add Oauth koodisto client implementation

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -82,6 +82,8 @@ db-scheduler.delay-startup-until-context-ready=true
 
 feature.mockapi=true
 
+organisaatio.koodisto-oauth2-client.enabled=false
+
 organisaatio.tasks.export.enabled=false
 organisaatio.tasks.export.bucket-name=none
 organisaatio.tasks.export.lampi-bucket-name=none
