OPHYK-304 Cleanup old cas implementation of koodisto client

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -117,6 +117,10 @@ rajapinnat.ytj.avain=TEST
 
 feature.mockapi=true
 
+otuva.jwt.issuer-uri=http://localhost:28080/kayttooikeus-service
+organisaatio.palvelukayttaja.client_id=client_id
+organisaatio.palvelukayttaja.client_secret=client_secret
+
 organisaatio.tasks.export.enabled: false
 organisaatio.tasks.export.bucket-name: none
 organisaatio.tasks.export.lampi-bucket-name: none
