OPHYK-304 Fix running the service locally

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -82,6 +82,9 @@ db-scheduler.delay-startup-until-context-ready=true
 
 feature.mockapi=true
 
+otuva.jwt.issuer-uri=http://localhost:${server.port}/organisaatio-service/mock/kayttooikeus-service
+organisaatio.palvelukayttaja.client_id=organisaatio
+organisaatio.palvelukayttaja.client_secret=foobar
 
 organisaatio.tasks.export.enabled=false
 organisaatio.tasks.export.bucket-name=none
