--- a/rekisterointi/pom.xml
+++ b/rekisterointi/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.11</version>
+		<version>3.4.4</version>
 		<relativePath/>
 	</parent>
 	<groupId>fi.vm.sade</groupId>
@@ -54,8 +54,9 @@
 			<version>1.18.30</version>
 		</dependency>
         <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-access</artifactId>
+            <groupId>ch.qos.logback.access</groupId>
+            <artifactId>logback-access-tomcat</artifactId>
+            <version>2.0.6</version>
         </dependency>
 		<dependency>
 			<groupId>fi.vm.sade.java-utils</groupId>
