OPHYK-496 use different OID node value for new organisations in test environments

--- a/organisaatio-service/src/main/resources/application.properties
+++ b/organisaatio-service/src/main/resources/application.properties
@@ -74,6 +74,7 @@ spring.datasource.username=postgres
 spring.datasource.password=
 spring.datasource.hikari.maximumPoolSize=20
 root.organisaatio.oid=1.2.246.562.10.00000000001
+organisaatio.solmuluokka=28
 ytjpaivitysloki.service.email=dummy@email.fi
 url-virkailija=https://${host.virkailija}
 url-ytj=https://api.tietopalvelu.ytj.fi/yritystiedot.asmx
