OPHYK-496 add solmuluokka value to test props

--- a/organisaatio-service/src/test/resources/application.properties
+++ b/organisaatio-service/src/test/resources/application.properties
@@ -1,4 +1,5 @@
 root.organisaatio.oid=1.2.246.562.24.00000000001
+organisaatio.solmuluokka=28
 cas.service.organisaatio-service=foobar
 
 organisaatio.api.rest.url=http://localhost:8080/organisaatio-service-5.0-SNAPSHOT/rest
