OPHYK-300 use organisaatiopalvelu with Oauth2 from rekisterointi

--- a/rekisterointi/src/main/resources/application.properties
+++ b/rekisterointi/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3000
 server.servlet.context-path=/
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 management.endpoints.web.exposure.include=health
 
-rekisterointi.service.username=dummy
-rekisterointi.service.password=dummy
+rekisterointi.palvelukayttaja.client-id=dummy
+rekisterointi.palvelukayttaja.client-secret=dummy
