--- a/rekisterointi/src/main/resources/rekisterointi-oph-dev.properties
+++ b/rekisterointi/src/main/resources/rekisterointi-oph-dev.properties
@@ -2,8 +2,8 @@ url-oppija=https://untuvaopintopolku.fi
 url-virkailija=https://virkailija.untuvaopintopolku.fi
 url-rekisterointi=http://localhost:3000
 
-rekisterointi.service.username=dummy
-rekisterointi.service.password=dummy
+rekisterointi.palvelukayttaja.client-id=dummy
+rekisterointi.palvelukayttaja.client-secret=dummy
 rekisterointi.valtuudet.host=https://asiointivaltuustarkastus.test.suomi.fi
 rekisterointi.valtuudet.api-key=dummy
 rekisterointi.valtuudet.client-id=dummy
