OPHYK-300 add missing test props

--- a/rekisterointi/src/test/resources/application.properties
+++ b/rekisterointi/src/test/resources/application.properties
@@ -1,4 +1,8 @@
 server.port=3000
 server.servlet.context-path=/
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 management.endpoints.web.exposure.include=health
+
+otuva.jwt.issuer-uri=http://localhost:9000
+rekisterointi.palvelukayttaja.client-id=dummy
+rekisterointi.palvelukayttaja.client-secret=dummy
