OPHYK-300 Oauth2 clients for varda-rekisterointi

--- a/varda-rekisterointi/src/main/resources/application.yml
+++ b/varda-rekisterointi/src/main/resources/application.yml
@@ -41,6 +41,8 @@ varda-rekisterointi:
   rekisterointi-ui:
     username: varda-rekisterointi
     password: varda-rekisterointi
+varda-rekisterointi.palvelukayttaja.client-id: dummy
+varda-rekisterointi.palvelukayttaja.client-secret: dummy
 
 server.tomcat.accesslog.enabled: true
 server.tomcat.accesslog.directory: /dev
