--- a/varda-rekisterointi/src/test/resources/application.yml
+++ b/varda-rekisterointi/src/test/resources/application.yml
@@ -26,5 +26,7 @@ varda-rekisterointi:
   rekisterointi-ui:
     username: varda-rekisterointi
     password: varda-rekisterointi
+varda-rekisterointi.palvelukayttaja.client-id: dummy
+varda-rekisterointi.palvelukayttaja.client-secret: dummy
 
 viestinvalitys.baseurl: https://viestinvalitys.hahtuvaopintopolku.fi/lahetys
